java and vaadin upgrade